<resources>
    <string name="app_name">My Chat</string>
    <string name="dummy_txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="double_check_txt">✔✔</string>
    <string name="type_here">type here</string>
    <string name="_3_22">20:30</string>
    <string name="_5_22">20:31</string>
    <string name="_6_22">20:32</string>
    <string name="hi_leo">Hi Leo. Whats up ??\n I need a new logo for group.</string>
    <string name="simple">Simple , minimal and beaut…</string>
    <string name="ok_">OK Ill start next week.\nSend me documents today.</string>
    <string name="oh_">Oh.That\'s great 😍</string>

</resources>